added initial creation of class instances, and it's markup generation

--- a/src/index.html
+++ b/src/index.html
@@ -62,13 +62,7 @@
     </div>
     <main>
       <div class="container">
-        <ul class="game-board">
-          <li class="first"></li>
-          <li class="second"></li>
-          <li class="third"></li>
-          <li class="4"></li>
-          <li class="5"></li>
-        </ul>
+        <ul class="game-board"></ul>
       </div>
     </main>
   </body>
