added basic countdown timer, set for 60 seconds

--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,17 @@
     </div>
     <main>
       <div class="container">
+        <div class="timer" id="timer-1">
+          <div class="field">
+            <span class="value" data-value="minutes">01</span>
+            <span class="label">Minutes</span>
+          </div>
+          <span class="timer_divider">:</span>
+          <div class="field">
+            <span class="value" data-value="seconds">00</span>
+            <span class="label">Seconds</span>
+          </div>
+        </div>
         <ul class="game-board"></ul>
       </div>
     </main>
