added check if only one cube left then generate 10 more, added stop method to timer, added buttons start and new game, so their handlers

--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,8 @@
     </div>
     <main>
       <div class="container">
+        <button type="button" class="start">START</button>
+        <button type="button" class="new-game">NEW GAME</button>
         <div class="timer" id="timer-1">
           <div class="field">
             <span class="value" data-value="minutes">01</span>
