--- a/src/index.html
+++ b/src/index.html
@@ -62,8 +62,11 @@
     </div>
     <main>
       <div class="container">
-        <button type="button" class="start">START</button>
-        <button type="button" class="new-game">NEW GAME</button>
+        <button type="button" class="new-game">New game</button>
+        <button type="button" class="pause" data-state="started" disabled>
+          Pause
+        </button>
+
         <div class="timer" id="timer-1">
           <div class="field">
             <span class="value" data-value="minutes">01</span>
