added basic game points count, fixed issue when user may remove cubes after time is up

--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,9 @@
         <button type="button" class="pause" data-state="started" disabled>
           Pause
         </button>
-
+        <div class="points-container">
+          <span>Points</span><span class="points">0</span>
+        </div>
         <div class="timer" id="timer-1">
           <div class="field">
             <span class="value" data-value="minutes">01</span>
