added bootstrap, some styles to header, popups for rules and result, popup result show when time is up, removed unused scss files

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,6 @@
   </head>
 
   <body>
-    <h1 class="visually-hidden">Remove cubes game</h1>
     <div id="preloader" class="visible">
       <p class="preloader__text">Please, wait, we're doing our best!</p>
       <img
@@ -62,26 +61,172 @@
     </div>
     <main>
       <div class="container">
-        <button type="button" class="new-game">New game</button>
-        <button type="button" class="pause" data-state="started" disabled>
-          Pause
-        </button>
-        <div class="points-container">
-          <span>Points</span><span class="points">0</span>
-        </div>
-        <div class="timer" id="timer-1">
-          <div class="field">
-            <span class="value" data-value="minutes">01</span>
-            <span class="label">Minutes</span>
+        <div class="row align-items-center">
+          <div class="col-12 col-md-8 p-2 align-self-center">
+            <h1 class="text-left text-uppercase">Remove cubes</h1>
+            <div class="d-flex justify-content-between">
+              <div class="d-flex m-0 align-self-center flex-nowrap mr-2">
+                <button
+                  type="button"
+                  data-status="start"
+                  class="btn btn-outline-primary rounded-pill text-break mr-2 new-game"
+                >
+                  New game
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-outline-primary rounded-pill text-break pause"
+                  data-state="started"
+                  disabled
+                >
+                  Pause
+                </button>
+              </div>
+              <div class="d-flex m-0 align-self-center flex-nowrap">
+                <div class="d-inline-block points">Points</div>
+                <div
+                  class="d-inline-block p-2 bg-dark text-white mr-2 text-break js-scope"
+                >
+                  0
+                </div>
+                <div class="d-inline-block">Time left</div>
+                <div
+                  class="d-inline-block p-2 bg-dark text-white text-break timer"
+                  id="timer-1"
+                >
+                  00:01:00
+                </div>
+              </div>
+            </div>
           </div>
-          <span class="timer_divider">:</span>
-          <div class="field">
-            <span class="value" data-value="seconds">00</span>
-            <span class="label">Seconds</span>
+          <div
+            class="col-4 p-2 text-center align-self-center d-none d-md-block"
+          >
+            <button
+              type="button"
+              class="btn btn-dark w-100"
+              data-toggle="modal"
+              data-target="#staticBackdrop"
+            >
+              Rules
+            </button>
           </div>
         </div>
+
+        <!--        <div class="points-container">-->
+        <!--          <span>Points</span><span class="points">0</span>-->
+        <!--        </div>-->
+        <!--        <div class="timer" id="timer-1">-->
+        <!--          <div class="field">-->
+        <!--            <span class="value" data-value="minutes">01</span>-->
+        <!--            <span class="label">Minutes</span>-->
+        <!--          </div>-->
+        <!--          <span class="timer_divider">:</span>-->
+        <!--          <div class="field">-->
+        <!--            <span class="value" data-value="seconds">00</span>-->
+        <!--            <span class="label">Seconds</span>-->
+        <!--          </div>-->
+        <!--        </div>-->
         <ul class="game-board"></ul>
       </div>
     </main>
+    <div
+      class="modal fade"
+      id="staticBackdrop"
+      data-backdrop="static"
+      data-keyboard="false"
+      tabindex="-1"
+      aria-labelledby="staticBackdropLabel"
+      style="display: none"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content p-4">
+          <div class="modal-header">
+            <h5 class="modal-title" id="staticBackdropLabel">Rules</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <div class="mb-4">Welcome to Funny square game!</div>
+            <ul class="p-4">
+              <li class="mb-2">
+                The goal of the game is to score as many points as possible
+              </li>
+              <li class="mb-2">You get 2 points for the green square</li>
+              <li class="mb-2">You get 1 point for the yellow square</li>
+              <li class="mb-2">You will lose 1 point per red square</li>
+              <li class="mb-2">
+                When you click on a green, yellow or red square, one, two or
+                zero new cubes may appear
+              </li>
+              <li class="mb-2">
+                The game ends after time is left or if all the spaces are filled
+                with colored squares or colored squares disappear completely
+              </li>
+            </ul>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal">
+              Understood
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+      class="modal fade result-popup"
+      id="staticBackdrop2"
+      data-backdrop="static"
+      data-keyboard="false"
+      tabindex="-1"
+      aria-labelledby="staticBackdropLabel2"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title" id="staticBackdropLabel2">Hall of fame</h4>
+            <button
+              type="button"
+              class="btn-close"
+              data-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <div class="mb-5">
+              Your result is <span class="js-scope">0</span> scopes
+            </div>
+            <form class="mb-5 js-add-result">
+              <input
+                class="form-control mb-3"
+                name="name"
+                maxlength="15"
+                minlength="2"
+                required=""
+                placeholder="Nick name"
+              />
+              <button type="submit" class="btn btn-primary mb-2">
+                Add your name to hall of fame
+              </button>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Cancel
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
