updated game board styles, added open graph info and results table in index.html; added table results functionality; reduced site preloader time;

--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta property="og:title" content="Test task - remove cubes game" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.mymovies.com.ua" />
+    <meta property="og:url" content="https://massqeen.github.io/cubesgame/" />
     <meta
       property="og:image"
-      content="https://image.tmdb.org/t/p/w500/1n00NlOGRFZVs8coBxyZLm5l4EC.jpg"
+      content="https://massqeen.github.io/cubesgame/images/cubesgame.jpg"
     />
     <meta
       property="og:description"
@@ -116,7 +116,32 @@
             </button>
           </div>
         </div>
-        <ul class="game-board"></ul>
+        <div class="row h-75">
+          <div class="col-12 col-md-8 p-2 position-relative">
+            <ul
+              class="border border-primary shadow-sm bg-light rounded game-board"
+            ></ul>
+          </div>
+          <div class="col-4 p-2 d-none d-md-block">
+            <h4 class="text-center">Top 10 results</h4>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th class="p-2 text-center" scope="col">&#8470</th>
+                  <th class="p-2 text-center" scope="col">Name</th>
+                  <th class="p-2 text-center" scope="col">Score</th>
+                </tr>
+              </thead>
+              <tbody class="result-table">
+                <tr>
+                  <th class="p-1 text-center" scope="row">1</th>
+                  <td class="p-1 text-center text-break">AI</td>
+                  <td class="p-1 text-center">1</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
       </div>
     </main>
     <div
