added removing blue cubes by double-click, added check if game-board is filled by 90% - then no cubes are generating; updated rules

--- a/src/index.html
+++ b/src/index.html
@@ -178,6 +178,7 @@
             <ul>
               <li class="mb-2">2 points for the green cube;</li>
               <li class="mb-2">3 points for the blue cube;</li>
+              <li class="mb-2">Double-click blue cube to remove it;</li>
               <li class="mb-2">1 point for the rest of colors;</li>
               <li class="mb-2">2x points for any small cube;</li>
               <li class="mb-2">-2 seconds for the red cube;</li>
