updated open graph img url

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <meta property="og:url" content="https://massqeen.github.io/cubesgame/" />
     <meta
       property="og:image"
-      content="https://massqeen.github.io/cubesgame/images/cubesgame.jpg"
+      content="https://images-na.ssl-images-amazon.com/images/I/71Djlm1iHFL._AC_SL1500_.jpg"
     />
     <meta
       property="og:description"
